# Computpract

./: README.md  ЛР12.md  ЛР5.md
Delete/: LR5.md  ЛР5.md
ЛР10/: README.md  app.py
ЛР10/JustLR10/: app_j.py
ЛР10/JustLR10/templates/: makeimage.html
ЛР10/templates/: makeimage.html
ЛР11/: README.md  generate_keys.py  key.pem  key.txt  main.py  manage.py  secret.txt
ЛР11/decrypter_app/: apps.py  urls.py  views.py
ЛР11/decrypter_app/templates/decrypter_app/: index.html
ЛР11/decrypter_django/: asgi.py  settings.py  urls.py  wsgi.py
ЛР11/static/: script.js
ЛР11/templates/: index.html
ЛР14/: README.md  professors_info.csv
ЛР15/: README.md  herzen_news.csv
ЛР16/: README.md  main.py
ЛР17/: README.md  calc-history.log.txt  pyproject.toml
ЛР17/src/calculator/: core.py
ЛР17/tests/: test_core.py
ЛР18/: README.md  index.html
ЛР19/: README.md  code.py
ЛР20/: README.md  main.py
ЛР9/: README.md  main.py
