[tool.poetry]
name = "calculator"  
version = "0.1.0"
description = "A simple calculator project"
authors = ["MelnikNO <melnik3570@gmail.com>"]
readme = "README.md"  

[tool.poetry.dependencies]
python = "^3.11"
tabulate = "^0.9.0"
pdoc = "^12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
black = "^22.12.0"
pylint = "^2.17.7"
ipdb = "^0.13.13"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"